@@ -20,6 +20,8 @@ systemd System and Service Manager
  * systemctl:
     - add preset-all command;
     - remove host argument option;
+ * loginctl:
+    - remove host argument option;
  * tmpfiles:
  	- add "L+" command;
  * tests:
